# flywire-analysis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
notebook/: README.md  column_assignment_validation.ipynb  column_assignment_validation.py  edge_compensation_t4t5_lateral.py  flywire_eda.ipynb  flywire_eda.py  lateral_inhibition.ipynb  lateral_inhibition.py  lateral_inhibition_extended.py  lateral_inhibition_rigorous.py
notebooks/: README.md  column_assignment_validation.ipynb  edge_compensation_t4t5_lateral.ipynb  flywire_eda.ipynb  lateral_inhibition.ipynb  lateral_inhibition_edge_and_motifs.ipynb  lateral_inhibition_extended.ipynb  lateral_inhibition_rigorous.ipynb  lateral_inhibition_tmy16_tm33_mediators.ipynb
report/: README.md  generate_figures.py
report/lateral_inhibition/: README.md  generate_figures.py  generate_per_column_figures.py  main.tex
scripts/lateral_inhibition/: generate_figures.py  generate_lateral_distribution_maps.py  generate_lateral_percell_footprints.py  generate_per_column_figures.py  generate_type_kernel_maps.py
src/: config.py
src/data/: __init__.py  base_data_manager.py  dataset_descriptor.py  flywire_dataloader.py
src/lateral/: __init__.py  classifier.py  edge_region.py  hexgeom.py  nt_sign.py  pathtrace.py  stage.py
tests/: conftest.py  test_classifier.py  test_data_geometry.py  test_data_regression.py  test_data_stage_biology.py  test_edge_region.py  test_hexgeom.py  test_nt_sign.py  test_pathtrace.py  test_stage.py
tests/fixtures/: extended_golden.json
