[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flywire-analysis"
version = "0.1.0"
description = "FlyWire connectome dataset loaders"
readme = "README.md"
authors = [{ name = "Keisuke Toyoda" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
